# model_evals

./: README.md
basketball_evals/: README.md
basketball_evals/data/: README.md  player-season-stats-fewshot.jsonl  player-season-stats-questions.jsonl  player-season-stats.csv  player-season-stats.jsonl  player-totals.csv  players-advanced.csv  plays-few-shot.jsonl  plays.jsonl
basketball_evals/data/scripts/: combine_csv.py  convert_to_jsonl.py  create_questions.py
basketball_evals/evals/: basketball-plays.py  calculate-player-stats.py
simple_evals/: README.md  gsm8k.ipynb
simple_evals/multiple-choice-eval/: README.md  sciq.ipynb
simple_evals/perplexity-eval/: Perplexity-eval.ipynb  README.md
travel_planner_eval/: .gitignore  README.md  __init__.py  pyproject.toml
travel_planner_eval/constraints/: hard.py
travel_planner_eval/logs/: 2026-03-06T00-11-24+00-00_travel-planner-direct_gdu4QZQwcSqLd2FUAjB8iZ.eval
travel_planner_eval/src/: README.md  __init__.py  database.py  dataset.py  prompts.py  scorer.py  solver.py  travel_planner.py  utils.py
travel_planner_eval/src/constraints/: __init__.py  commonsense.py  hard.py
travel_planner_eval/src/travel_planner_eval/: _version.py  database.py  eval.yaml  solver.py
travel_planner_eval/src/travel_planner_eval/constraints/: commonsense.py
travel_planner_eval/tests/: test_constraints_commonsense.py  test_constraints_hard.py  test_dataset.py  test_scorer.py  test_utils.py
