[project]
name = "travel-planner-eval"
version = "1.0.0"
description = "TravelPlanner evaluation using the Inspect AI framework"
requires-python = ">=3.11"
dependencies = [
    "inspect_ai >= 0.3.158",
    "pandas >= 2.0",
    "datasets >= 2.0",
    "openai",
]

[project.entry-points.inspect_ai]
travel_planner_eval = "travel_planner_eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_planner_eval"]
