[project]
name = "travel-planner-eval"
version = "1.0.0"
description = "TravelPlanner evaluation using the Inspect AI framework"
requires-python = ">=3.11"
dependencies = [
    "inspect_ai >= 0.3.158",
    "pandas >= 2.0",
    "datasets >= 2.0",
    "openai",
    "google-genai>=1.66.0",
]

[project.entry-points.inspect_ai]
travel_planner_eval = "travel_planner_eval"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["travel_planner_eval", "travel_planner_eval.constraints"]

[tool.setuptools.package-dir]
travel_planner_eval = "src"
"travel_planner_eval.constraints" = "src/constraints"
